cluster/monitoring/http-route-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: grafana
  namespace: monitoring
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
  hostnames: ["grafana.une-tasse-de.cafe"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: loki-stack-grafana
      port: 80
---
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: prometheus
  namespace: monitoring
spec:
  parentRefs:
  - name: shared-gateway
    namespace: default
  hostnames: ["prometheus.une-tasse-de.cafe"]
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: loki-stack-prometheus-server
      port: 80
